2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* configure.in, src/vfakeio.h, src/vfakeio.cpp: Remove the dependancy
	on gnome-vfs.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/stats_drawing_area.c: Use g_malloc0/g_free instead of
	malloc/free. Fixes a warning.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c: Include <stdio.h>, since it's needed. Fixes a
	warning.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c(database_load_file): Changed the guchar buffer
	into gchar buffer. Fixes signedness warnings.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c, lib/gnome_prefs_window.c: Changed use of strlen
	to g_utf8_strlen.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/contacts/gm_contacts-gm_conf.cpp: Fix stupid error in
	gnomemeeting_local_addressbook_delete_contact.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* configure.in: The patch to disable gnome-doc-utils with
	--disable-gnome was half-bad.

2005-08-24  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: Replaced unuseful code by a call to UpdateDevices 
	to avoid code duplication.

	* src/endpoint.[cpp|h]: Added basic H.323 video support!

	* src/gdkvideoio.[cpp|h]: Fixed colour format to RGB24. Code cleanup.

	* src/vfakeio.cpp: Same.

	* src/videograbber.cpp: Fixed leak.
	
2005-08-24  Julien Puydt  <jpuydt@free.fr>

	* configure.in: More work on getting pwlib&opal detection more gentle
	with alien systems.

2005-08-24  Julien Puydt  <jpuydt@free.fr>

	* configure.in: The previous patch was half-wrong: it didn't recall
	the previous result correctly.

2005-08-24  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Made some opal tests use the previous results, and
	hence work even when opal isn't installed in a system directory.

2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Made the error message about ptlib-config not found
	actually work ;-)

2005-08-23  Julien Puydt  <jpuydt@free.fr>
