@@ -1,3 +1,7 @@
+2005-08-30  Julien Puydt  <jpuydt@free.fr>
+
+	* src/common.h: Remove #ifdef WIN32 cruft.
+
 2005-08-25  Julien Puydt  <jpuydt@free.fr>
 
 	* configure.in, src/vfakeio.h, src/vfakeio.cpp: Remove the dependancy
